[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Backgrounds/CafeBackground.jpeg" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/cnr.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Caesar/Scripts/CCDialogueEnd.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/george-street-shuffle-by-kevin-macleod.oggstr" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="DialogueBox" type="Polygon2D" parent="."]
position = Vector2( 38.4895, -27.5753 )
color = Color( 0.345098, 0.341176, 0.341176, 0.784314 )
polygon = PoolVector2Array( 49, 482, 51, 611, 910, 609, 913, 482 )

[node name="Dialogue" type="RichTextLabel" parent="DialogueBox"]
margin_left = 82.0
margin_top = 499.75
margin_right = 880.0
margin_bottom = 593.75
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
script = ExtResource( 3 )

[node name="NextScene" type="Button" parent="DialogueBox/Dialogue"]
margin_left = 598.25
margin_top = 15.4
margin_right = 767.25
margin_bottom = 66.4
custom_fonts/font = SubResource( 2 )
text = "Level 1"

[node name="Timer" type="Timer" parent="DialogueBox"]
wait_time = 0.02
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true
[connection signal="pressed" from="DialogueBox/Dialogue/NextScene" to="DialogueBox/Dialogue" method="_on_NextScene_pressed"]
[connection signal="timeout" from="DialogueBox/Timer" to="DialogueBox/Dialogue" method="_on_Timer_timeout"]
